# NodeBackEnd/code/api/swagger/swagger.yaml
@@ -10,7 +10,7 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 host: localhost:3000
-basePath: /
+basePath: /api
 schemes: 
   - http
 consumes: 
@@ -18,38 +18,33 @@ consumes:
 produces: 
   - application/json
 paths:
-  /pets:
+  /users:
     get:
       description: |
-        Returns all pets from the system that the user has access to
-      operationId: findPets
+        Returns all users from the system if the user is authenticated and has admin privilege 
+      operationId: getAllUser
       parameters:
-        - name: tags
-          in: query
-          description: tags to filter by
-          required: false
-          type: array
-          collectionFormat: csv
-          items:
-            type: string
-        - name: limit
+        - name: pageSize
           in: query
           description: maximum number of results to return
           required: false
           type: integer
-          format: int32
+        - name: pageNumber
+          in: query
+          description: index of page, starts from 0 (zero)
+          required: false
+          type: integer
+        - name: x-auth-token
+          in: header
+          description: access token provided by server after authorization
+          required: true
+          type: string
       responses:
         "200":
-          description: pet response
-          schema:
-            type: string
-        default:
-          description: unexpected error
-          schema:
-            type: string
+          description: list of user objects
     post:
-      description: Creates a new pet in the store.  Duplicates are allowed
-      operationId: addPet
+      description: Creates a new user in the store. Duplicate email not allowed
+      operationId: createUser
       parameters:
         - name: pet
           in: body
